models, views & urls of expense_detail is added!!!

--- a/client/templates/client/dashboard.html
+++ b/client/templates/client/dashboard.html
@@ -59,7 +59,7 @@
               <div class="inner">
                 <h3>{{ today_collection }}</h3>
 
-                <p>Today Collections</p>
+                <p>Today's Collection</p>
               </div>
               <div class="icon">
                 <i class="ion ion-pie-graph"></i>
