--- a/employee_master/templates/employee_master/employee_detail.html
+++ b/employee_master/templates/employee_master/employee_detail.html
@@ -72,7 +72,8 @@
                   <span class="tag tag-primary">Account Number: {{ object.account_no }}</span><hr/>
                   <span class="tag tag-primary">IFSC Code: {{ object.ifsc_code }}</span><hr/>
                   <span class="tag tag-primary">Salary: {{ object.salary }}</span><hr/>
-                  <span class="tag tag-primary">Pan Number: {{ object.Pan_Number }}</span>
+                  <span class="tag tag-primary">Pan Number: {{ object.Pan_Number }}</span><hr/>
+                  <span class="tag tag-primary">Vaccinated: {{ object.vaccinated }}</span>
 
 
                 <hr>
