--- a/creditors_payment/templates/creditors_payment/payment_confirm_delete.html
+++ b/creditors_payment/templates/creditors_payment/payment_confirm_delete.html
@@ -42,6 +42,11 @@
                     <b> ID Of Online Transaction: </b> <a class="float-right">{{ object.reffrence }}</a>
                     </li>
 
+                    <li class="list-group-item">
+                    <b> Slip Number: </b> <a class="float-right">{{ object.slip_no }}</a>
+                    </li>
+
+
         </ul>
 
         <div align="center">
