--- a/creditors_payment/templates/creditors_payment/payment_detail.html
+++ b/creditors_payment/templates/creditors_payment/payment_detail.html
@@ -40,6 +40,10 @@
                     <b> ID Of Online Transaction: </b> <a class="float-right">{{ object.reffrence }}</a>
                     </li>
 
+                    <li class="list-group-item">
+                    <b> Slip Number: </b> <a class="float-right">{{ object.slip_no }}</a>
+                    </li>
+
                 </div>
                 </ul>
 </ul>
