--- a/employee_master/templates/employee_master/employee_confirm_delete.html
+++ b/employee_master/templates/employee_master/employee_confirm_delete.html
@@ -117,6 +117,11 @@
                     <b> Pan Number: </b> <a class="float-right">{{ object.Pan_Number }}</a>
                     </li>
 
+                    <li class="list-group-item">
+                    <b> Vaccinated: </b> <a class="float-right">{{ object.vaccinated }}</a>
+                    </li>
+
+
      </ul>
 
         <div align="center">
