--- a/employee_master/templates/employee_master/employee_form.html
+++ b/employee_master/templates/employee_master/employee_form.html
@@ -405,7 +405,7 @@
                 <div class="row">
 
                 <!-- /.form group -->
-                  <div class="form-group col-lg-6 col-lg-6">
+                  <div class="form-group col-lg-4 col-lg-4">
                     <label for="exampleInputPetrolrate">Salary</label>
                       {% crispy_field form.salary %}
                       {% if  form.salary.errors %}
@@ -418,7 +418,7 @@
                   </div>
 
                     <!-- /.form group -->
-                  <div class="form-group col-lg-6 col-lg-6">
+                  <div class="form-group col-lg-4 col-lg-4">
                     <label for="exampleInputPetrolrate">Pan_Number</label>
                       {% crispy_field form.Pan_Number %}
                       {% if  form.Pan_Number.errors %}
@@ -430,7 +430,18 @@
                       {% endif %}
                   </div>
 
-
+                  <!-- /.form group -->
+                  <div class="form-group col-lg-4 col-lg-4">
+                    <label for="exampleInputPetrolrate">Vaccinated</label>
+                      {% crispy_field form.vaccinated %}
+                      {% if  form.vaccinated.errors %}
+                          {% for error in form.vaccinated.errors %}
+                              <div class="invalid-feedback">
+                                  {{ error }}
+                              </div>
+                          {% endfor %}
+                      {% endif %}
+                  </div>
 
                 </div>
 
