--- a/suppliers_master/templates/suppliers_master/suppliers_detail.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_detail.html
@@ -21,6 +21,10 @@
                     </li>
 
                     <li class="list-group-item">
+                    <b> Oil In Literes: </b> <a class="float-right">{{ object.oil_in_lit }}</a>
+                    </li>
+
+                    <li class="list-group-item">
                     <b> Loss Of Petrol In Literes: </b> <a class="float-right">{{ object.loss_of_petrol_in_lit }}</a>
                     </li>
 
