--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -210,9 +210,9 @@
 
             <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-file-invoice-dollar"></i>
+              <i class="nav-icon fas fa-rupee-sign"></i>
               <p>
-                Rate
+                Daily Rates
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
@@ -221,7 +221,7 @@
                   <li class="nav-item">
                     <a href="{% url 'rate-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -249,7 +249,7 @@
                   <li class="nav-item">
                     <a href="{% url 'tank-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -275,7 +275,7 @@
                   <li class="nav-item">
                     <a href="{% url 'nozzlle-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -301,7 +301,7 @@
                   <li class="nav-item">
                     <a href="{% url 'nozzlle_transaction-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -327,7 +327,7 @@
                   <li class="nav-item">
                     <a href="{% url 'calculation-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -353,7 +353,7 @@
                   <li class="nav-item">
                     <a href="{% url 'employee-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -379,7 +379,7 @@
                   <li class="nav-item">
                     <a href="{% url 'employee_payment-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -406,7 +406,7 @@
                   <li class="nav-item">
                     <a href="{% url 'creditors-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -433,7 +433,7 @@
                   <li class="nav-item">
                     <a href="{% url 'creditor_transaction-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -460,7 +460,7 @@
                   <li class="nav-item">
                     <a href="{% url 'creditors_payment-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -487,7 +487,7 @@
                   <li class="nav-item">
                     <a href="{% url 'vehicle-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -514,7 +514,7 @@
                   <li class="nav-item">
                     <a href="{% url 'suppliers_master-new' %}" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>New</p>
+                      <p>Entry</p>
                     </a>
                   </li>
                   <li class="nav-item">
