--- a/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
@@ -6,6 +6,10 @@
     {% csrf_token %}
      <ul>
          <li class="list-group-item">
+             <b> Date: </b> <a class="float-right">{{ object.date }}</a>
+         </li>
+
+         <li class="list-group-item">
              <b> Nozzlle Number: </b> <a class="float-right">{{ object.nozzlle_no }}</a>
          </li>
 
