--- a/nozzlle_master/templates/nozzlle_master/nozzlle_form.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_form.html
@@ -1,7 +1,11 @@
 {% extends "client/layout.html" %}
 {% load static %}
 {% load crispy_forms_field %}
+{% block extra_css %}
+<!-- daterange picker -->
+  <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css' %}">
 
+{% endblock %}
 {% block body %}
     <!-- general form elements -->
             <div class="card card-primary">
@@ -16,6 +20,23 @@
                   <hr/>
                   <div class="card-body">
               <div class="row">
+
+                 <div class="form-group col-lg-4 col-lg-4">
+                  <label>Date:</label>
+                    <div class="input-group date" id="reservationdate" data-target-input="nearest">
+                        {% crispy_field form.date %}
+                        {% if form.date.errors %}
+                            {% for error in date.errors %}
+                                <div class="invalid-feedback">
+                                {{ error }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                        <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
+                            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                        </div>
+                    </div>
+                </div>
 
                   <div class="form-group form-group col-lg-4 col-lg-4">
                     <label for="exampleInputPetrolrate">Enter Nozzlle_No</label>
@@ -70,9 +91,28 @@
             <!-- /.card -->
 
             <!-- general form elements -->
+
 {% endblock %}
+
 {% block extra_js %}
     <!-- bs-custom-file-input -->
     <script src=" {% static 'plugins/bs-custom-file-input/bs-custom-file-input.min.js' %} "></script>
+
+    <!-- InputMask -->
+    <script src="{% static 'plugins/moment/moment.min.js'%}"></script>
+    <script src="{% static 'plugins/inputmask/jquery.inputmask.min.js'%}"></script>
+    <!-- date-range-picker -->
+    <script src="{% static 'plugins/daterangepicker/daterangepicker.js'%}"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js'%}"></script>
+<script>
+$(function () {
+    <!-- bootstrap color picker -->
+    //Date range picker
+    $('#reservationdate').datetimepicker({
+        format: 'YYYY-MM-DD'
+    });
+});
+</script>
 
 {% endblock %}
